compiler/tests/fixtures/invalid/semantics/action_selector_cycle.viv
// Invalid: cycle among action selectors

action wave:
    roles:
        @waver:
            as: initiator

action-selector alpha:
    roles:
        @actor:
            as: initiator
    target randomly:
        selector beta;

action-selector beta:
    roles:
        @actor:
            as: initiator
    target randomly:
        selector alpha;
